replace multiline strings by text blocks